unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fferpcore__IHCCIntegration_Queue_Event__c.object-meta.xml
<CustomObject>
    <description>This object handles all the events in the integration core queue.</description>
    <label>Integration Core Queue Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Core Queue Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>