unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Direction__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Direction__c</fullName>
    <description>Displays the direction of the events this lock is for.</description>
    <inlineHelpText>Displays the direction of the events this lock is for.</inlineHelpText>
    <label>Message Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IntegrationToSalesforceOrg</fullName>
                <default>true</default>
                <label>Integration To PSA</label>
            </value>
            <value>
                <fullName>SalesforceOrgToIntegration</fullName>
                <label>PSA To Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>