unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Enqueued_Datetime__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Enqueued_Datetime__c</fullName>
    <description>The date and time when the item was added to the queue.</description>
    <inlineHelpText>The date and time when the item was added to the queue.</inlineHelpText>
    <label>Enqueued Date and Time</label>
    <type>DateTime</type>
</CustomField>