unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Integration_Id__c</fullName>
    <description>The registered integration this queued event is for.</description>
    <inlineHelpText>The registered integration this queued event is for.</inlineHelpText>
    <label>Integration Registration</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>