unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Last_Processed_Datetime__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Last_Processed_Datetime__c</fullName>
    <description>The date and time when the item was last processed.</description>
    <inlineHelpText>The date and time when the item was last processed.</inlineHelpText>
    <label>Last Processed Date and Time</label>
    <type>DateTime</type>
</CustomField>