unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Message_Content__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Message_Content__c</fullName>
    <description>Displays the content of the message sent to the REST endpoint.</description>
    <inlineHelpText>Displays the content of the message sent to the REST endpoint.</inlineHelpText>
    <label>Message Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>