unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Message_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Message_Timestamp__c</fullName>
    <description>The timestamp of the message.</description>
    <inlineHelpText>The timestamp of the message.</inlineHelpText>
    <label>Message Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>