unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Retry_Count__c</fullName>
    <description>The number of times the event has been retried.</description>
    <inlineHelpText>The number of times the event has been retried.</inlineHelpText>
    <label>Count of Attempts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>