unpackaged/main/default/objects/fferpcore__IHCCIntegration_Queue_Event__c/fields/fferpcore__Status__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Status__c</fullName>
    <description>Displays the status of the event.</description>
    <inlineHelpText>Displays the status of the event.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processed_Success</fullName>
                <label>Processed (Success)</label>
            </value>
            <value>
                <fullName>Processed_Error</fullName>
                <label>Processed (Error)</label>
            </value>
            <value>
                <fullName>Processed_Skipped</fullName>
                <label>Processed (Skipped)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>